--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <div class="navbar" id="player">
       <button type="button" id="startButton" onClick="startGame()">START</button>
       <div class="navbar_points">
-          Points to win:
+          Score limit:
           <select id="pointsInput">
                 <option value="1">1</option>
                 <option value="2">2</option>
@@ -66,12 +66,17 @@
                 <hr>
                 <div class="info_actions_action">
                     <div><button type="button" onclick="reroll()">Reroll cards</button></div>
-                    <div>Once per game (on your turn and if you're not the tzar at the moment) you can reroll all your cards</div>
+                    <div>Once per game you can reroll all your cards (it has to be on your turn and you can't be the tzar)</div>
                 </div>
                 <hr>
                 <div class="info_actions_action">
                     <div><button type="button" onclick="vote()">Points to all!</button></div>
-                    <div>Before tzar picks a card, if everybody in the lobby presses this button (tzar included), everyone will be given a point (except the tzar)</div>
+                    <div>(Usable on tzar turn) If everybody in the lobby presses this button (tzar included), everyone who commited a card will be given a point</div>
+                </div>
+                <hr>
+                <div class="info_actions_action">
+                    <div><button type="button" onclick="skip()" id="skipButton">Skip black</button></div>
+                    <div>Skip the current black card (30s cooldown per person)</div>
                 </div>
                 <hr>
                 <div class="contact">
